[package]
name = "meta-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
# frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../benchmarking" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '4.0.0-dev' }
futures = "0.3.21"
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '4.0.0-dev' }
sc-consensus = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '0.10.0-dev' }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '6.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '6.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '6.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08', version = '4.0.0-dev' }
substrate-test-runtime = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08' }
substrate-test-runtime-client = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08' }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2022-08' }

libp2p = { version = "0.46.1", default-features = false }
[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
# runtime-benchmarks = [
# 	"frame-benchmarking/runtime-benchmarks",
# 	"frame-support/runtime-benchmarks",
# 	"frame-system/runtime-benchmarks",
# ]
try-runtime = ["frame-support/try-runtime"]