[package]
name    = "meta-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee               = { version = "0.15.1", features = ["server", "macros"] }
assert_matches          = "1.3.0"
async-trait             = "0.1.50"
codec                   = { package = "parity-scale-codec", version = "3.0.0" }
futures                 = "0.3.21"
log                     = "0.4.17"
serde                   = { version = "1.0", features = ["derive"] }
thiserror               = "1.0"
sc-client-api           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-babe       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-epochs     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-transaction-pool     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-api                  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-blockchain           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus-aura       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus-babe       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus-slots      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core                 = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-inherents            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-keystore             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-timestamp            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

prometheus-endpoint     = { package = "meta-prometheus-endpoint", path = "./prometheus" }

[dev-dependencies]
tokio                                   = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
sc-basic-authorship                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
substrate-test-runtime-client           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
substrate-test-runtime-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
