[package]
name = "meta-ethereum-chain-id"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.141", optional = true, features = ["derive"] }

# Substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
parity-scale-codec  = { default-features = false, version = "3.1.5", features = ["derive"] }
scale-info = { default-features = false, version = "2.1.2",  features = ["derive"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde",
]
try-runtime = ["frame-support/try-runtime"]
