[package]
name = "meta-node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
  async-trait    = "0.1"
  clap           = { version = "4.1", features = ["derive"] }
  futures        = "0.3.25"
  log            = "0.4.17"
  serde          = "1.0"
  serde_json     = "1.0"
# environmental  = "1.1.3"
# ethereum       = "0.14.0"
# ethereum-types = "0.14.1"
# evm            = "0.37.0"
# Parity
codec     = { version = "3.2.1", features = ["derive"], package = "parity-scale-codec" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
# Substrate
prometheus-endpoint      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37", package = "substrate-prometheus-endpoint"}
sc-basic-authorship      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-cli                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-client-api            = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-executor              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-finality-grandpa      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-keystore              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-network               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-rpc                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-rpc-api               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-service               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool-api  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-telemetry             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-api                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-block-builder         = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-blockchain            = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus-aura        = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-core                  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-finality-grandpa      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-inherents             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-io                    = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-offchain              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-session               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-state-machine         = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-timestamp             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-transaction-pool      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-trie                  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
# These dependencies are used for RPC
frame-system-rpc-runtime-api               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
substrate-frame-rpc-system                 = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
# Frontier
fc-cli          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-consensus    = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-db           = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-mapping-sync = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc-core     = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-consensus    = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-dynamic-fee  = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-evm          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-rpc          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-storage      = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
# local packages
meta-runtime = { package = "meta-runtime", path = "../meta-runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }

