[package]
name = "meta-node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait     = "0.1"
bip32           = { git = "https://github.com/purestake/crates", branch = "bip32-v0.4.0-fix", default-features = false, features = [ "bip39" ] }
clap            = { version = "4.1", features = ["derive"] }
futures         = { version = "0.3.1", features = [ "compat" ] }
hex-literal     = "0.3.4"
libsecp256k1    = { version = "0.7", features = [ "hmac" ] }
log             = "0.4.17"
serde           = { version = "1.0", features = [ "derive" ] }
serde_json      = "1.0"
sha3            = { version = "0.10", default-features = false }
tiny-bip39      = { version = "1.0", default-features = false }
# Parity
codec     = { version = "3.2.1", features = ["derive"], package = "parity-scale-codec" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
# Substrate
prometheus-endpoint      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37", package = "substrate-prometheus-endpoint"}
sc-basic-authorship      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-cli                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-client-api            = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-executor              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-keystore              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-network               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-rpc                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-rpc-api               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-service               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-transaction-pool-api  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sc-telemetry             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-api                   = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-block-builder         = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-blockchain            = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-consensus-aura        = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-core                  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-inherents             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-io                    = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-offchain              = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-session               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-state-machine         = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-timestamp             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-transaction-pool      = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-trie                  = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
# These dependencies are used for RPC
frame-system-rpc-runtime-api               = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc             = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
substrate-frame-rpc-system                 = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
# Frontier
fc-cli          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-consensus    = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-db           = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-mapping-sync = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fc-rpc-core     = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-consensus    = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-dynamic-fee  = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-evm          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-rpc          = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-storage      = { git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
# Local
meta-runtime           = { package = "meta-runtime", path = "../meta-runtime" }
meta-defichain-account = { package = "meta-defichain-account", path = "../meta-defichain/account"}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }

