[package]
name = "meta-node"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait     = "0.1"
clap            = { version = "3.1", features = ["derive"] }
futures         = "0.3.21"
log             = "0.4.17"
serde_json      = "1.0"
# Parity
codec 			= { version = "3.2.1", features = ["derive"], package = "parity-scale-codec" }
jsonrpsee       = { version = "0.20.0", features = ["server"] }

# Substrate
sc-basic-authorship             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-cli                          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-client-api                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-manual-seal        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-executor                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-keystore                     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-network                      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-rpc                          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-rpc-api                      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-service                      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-transaction-pool             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-telemetry                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-api                          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-block-builder                = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-blockchain                   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-inherents                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-io                           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime                      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-timestamp                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
substrate-frame-rpc-system      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
# Frontier
fc-cli   						= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fc-consensus   					= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fc-db   						= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fc-mapping-sync 				= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fc-rpc   						= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fc-rpc-core   					= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fp-consensus					= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fp-dynamic-fee					= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fp-evm							= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fp-rpc							= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
fp-storage						= { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.30" }
# local packages
meta-runtime = { package = "meta-runtime", path = "../meta-runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }

