[package]
name = "meta-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde 										= { default-features = false, version = "1.0.144", features = ["derive"], optional = true }
# Parity
codec 										= { default-features = false, version = "3.1.5", features = ["derive"], package = "parity-scale-codec" }
scale-info 									= { default-features = false, version = "2.1.2", features = ["derive"] }
# Substrate Primitive
sp-api 										= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-block-builder 							= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core 									= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-inherents 								= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io 										= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-offchain 								= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime 									= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-session 									= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std 										= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-transaction-pool 						= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-version 									= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
# Substrate Frame
frame-executive 							= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-support 								= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system 								= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-balances 							= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-sudo 								= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-timestamp 							= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-transaction-payment 					= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
## Used for runtime api
frame-system-rpc-runtime-api 				= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"  }
pallet-transaction-payment-rpc-runtime-api 	= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"  }
# Frontier Primitive
fp-evm										= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
fp-rpc										= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
fp-self-contained 							= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
## Frontier FRAME
pallet-base-fee 							= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
pallet-dynamic-fee 							= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
pallet-ethereum 							= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
pallet-evm 									= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
pallet-evm-chain-id							= { default-features = false, git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.27" }
# Local
meta-defichain								= { default-features = false, path = "../meta-defichain", package = "meta-defichain"}
meta-defichain-rpc-runtime-api				= { default-features = false, path = "../meta-defichain/rpc/runtime-api", package = "meta-defichain-rpc-runtime-api"}

[build-dependencies]
substrate-wasm-builder 						= { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
std = [
	"serde",
	# Parity
	"codec/std",
	"scale-info/std",
	# Substrate Primitive
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	# Substrate Frame
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	## Used for runtime api
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	# Frontier Primitive
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier Frame
	"pallet-balances/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	# Local
	"meta-defichain/std",
	"meta-defichain-rpc-runtime-api/std",
]
