[package]
name = "meta-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { default-features = false, version = "1.0.144", features = ["derive"], optional = true }
# Parity
codec      = { default-features = false, version = "3.2.1", features = ["derive"], package = "parity-scale-codec" }
scale-info = { default-features = false, version = "2.3.1", features = ["derive"] }
# Substrate Primitive
sp-api              = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-block-builder    = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-core             = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-inherents        = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-io               = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-offchain         = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-runtime          = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-session          = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-std              = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-transaction-pool = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
sp-version          = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
# Substrate Frame
frame-executive            = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
frame-support              = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
frame-system               = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-balances            = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-sudo                = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-timestamp           = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }
## Used for runtime api
frame-system-rpc-runtime-api               = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37"  }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37"  }
# Frontier Primitive
fp-evm            = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-rpc            = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
fp-self-contained = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
## Frontier FRAME
pallet-base-fee     = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-dynamic-fee  = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-ethereum     = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-evm          = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }
pallet-evm-chain-id = { default-features = false, git = "https://github.com/purestake/frontier.git", branch = "moonbeam-polkadot-v0.9.37" }

[build-dependencies]
substrate-wasm-builder = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	"serde",
	# Parity
	"codec/std",
	"scale-info/std",
	# Substrate Primitive
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	# Substrate Frame
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	## Used for runtime api
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	# Frontier Primitive
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier Frame
	"pallet-balances/std",
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
]
